# dt-srm

./: .editorconfig  .gitignore  README.md  pyproject.toml
django_api/: .env.example  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  schema.yml
django_api/accounts/: access_policies.py  admin.py  models.py  serializers.py  views.py
django_api/accounts/migrations/: 0001_initial.py  0002_customuser_default_group.py  0002_rename_children_organization_root.py  0002_rename_create_custompermissions_can_create_and_more.py  0003_customgroup_created_customgroup_updated.py  0004_customgroup_description.py  (+1 more)
django_api/common/: filter_mappings.py  flatten.py  get_permissions.py  strtobool.py
django_api/django_api/: celery.py  pagination.py  settings.py  urls.py
django_api/documents/: access_policies.py  admin.py  models.py  serializers.py  views.py  viewsets.py
django_api/invoices/: admin.py  models.py  serializers.py  views.py
django_api/kits/: admin.py  models.py  serializers.py  views.py
django_api/nodes/: access_policies.py  fields.py  models.py  serializers.py  views.py  viewsets.py
remix_frontend/: .env.example  Makefile  components.json  eslint.config.mjs  openapi-ts.config.ts  package.json  prettier.config.mjs  react-router.config.ts  tailwind.config.ts  vite.config.ts
remix_frontend/app/: app.css  entry.server.tsx  root.tsx
website/: .env.example  Makefile  package.json  wrangler.toml
website/www/: about.html  contact.html  features.html  index.html  pricing.html  register.html  scripts.js  styles.css
(+180 files in other folders)
